fix: overflow fixed for mobile

--- a/src/output.css
+++ b/src/output.css
@@ -1313,6 +1313,18 @@ video {
   font-size: 120px;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[12px\] {
+  font-size: 12px;
+}
+
+.text-\[15px\] {
+  font-size: 15px;
+}
+
 .font-bold {
   font-weight: 700;
 }
